force-app/main/default/objects/Product__c/Product__c.object-meta.xml
<CustomObject>
    <label>Product Subscription</label>
    <nameField>
        <displayFormat>PS-{00000000}</displayFormat>
        <label>Product Subscription Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>