force-app/main/default/objects/Product__c/fields/Charge__c.field-meta.xml
<CustomField>
    <fullName>Charge__c</fullName>
    <formula>CASE(Contact__r.Home_Country__r.Country_Code__c,
  &apos;UK&apos;,
    CASE(Product__r.Family,
    &apos;Standard&apos;,
      &apos;0&apos;,
    &apos;Black&apos;,
      &apos;N/A&apos;,
    &apos;Metal&apos;,
      &apos;N/A&apos;,
    &apos;&apos;),
  &apos;FR&apos;,
    CASE(Product__r.Family,
    &apos;Standard&apos;,
      &apos;0&apos;,
    &apos;Black&apos;,
      &apos;9.90&apos;,
    &apos;Metal&apos;,
      &apos;16.90&apos;,
    &apos;&apos;),
  &apos;DE&apos;,
    CASE(Product__r.Family,
    &apos;Standard&apos;,
      &apos;0&apos;,
    &apos;Black&apos;,
      &apos;9.90&apos;,
    &apos;Metal&apos;,
      &apos;16.90&apos;,
    &apos;&apos;),
  &apos;IT&apos;,
    CASE(Product__r.Family,
    &apos;Standard&apos;,
      &apos;0&apos;,
    &apos;Black&apos;,
      &apos;9.90&apos;,
    &apos;Metal&apos;,
      &apos;16.90&apos;,
    &apos;&apos;),
  &apos;ES&apos;,
    CASE(Product__r.Family,
    &apos;Standard&apos;,
      &apos;0&apos;,
    &apos;Black&apos;,
      &apos;9.90&apos;,
    &apos;Metal&apos;,
      &apos;16.90&apos;,
    &apos;&apos;),
  &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge</label>
    <type>Text</type>
</CustomField>