force-app/main/default/objects/Product__c/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <formula>IF(CONTAINS(&apos;ATM Fee in other currencies&apos;,  Product__r.Name),
  &apos;Percentage&apos;,
  &apos;Amount&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Type</label>
    <type>Text</type>
</CustomField>